# HydrogenLib

./: .gitignore  License.md  License_CN.md  README.md  publish-hook  pyproject.toml  refact.py  requirements.txt  test.py  upload-for-workflow.py  upload.py
.github/ISSUE_TEMPLATE/: bug_template.yml
.github/workflows/: build.yml  python-publish.yml  python-release-publish.yml
git-hooks/: commit-msg.py  install.py
hydrogenlib/: README.md  pyproject.toml
modules/hyargs/: pyproject.toml
modules/hyauth/: pyproject.toml
modules/hycl/: pyproject.toml
modules/hyconfig/: pyproject.toml
modules/hycore/: README.md  pyproject.toml
modules/hycrypto/: pyproject.toml
modules/hyctypes/: pyproject.toml
modules/hyctypes-extra/: pyproject.toml
modules/hydantic/: pyproject.toml
modules/hydemo/: pyproject.toml
modules/hydownloader/: pyproject.toml
modules/hyencrypt/: pyproject.toml
modules/hyfilesystem/: pyproject.toml
modules/hyfs/: pyproject.toml
modules/hylog/: pyproject.toml
modules/hynet-structure/: README.md  pyproject.toml
modules/hyoverload/: README.md  pyproject.toml
modules/hypipe/: README.md  pyproject.toml
modules/hypy/: README.md  pyproject.toml
modules/hyquickapi/: pyproject.toml
modules/hyre/: pyproject.toml
modules/hyserialize/: pyproject.toml
modules/hyshm/: README.md  pyproject.toml
modules/hysocket/: README.md  pyproject.toml
modules/hystruct/: pyproject.toml
modules/hytemplate/: pyproject.toml
modules/hytest/: pyproject.toml
modules/hythreading/: README.md  pyproject.toml
modules/hyttlcache/: pyproject.toml
modules/hywinreg/: README.md  pyproject.toml
scripts/: build_project.py  generate_requirements.py  scan_requirements.py  upload-for-workflow.py
src/hyargs/: README.md  pyproject.toml
src/hyauth/: README.md
src/hybitmap/: __init__.py  quick-build.py  setup.py
src/hydrolib/data_structures/bitmap-project/: README.md  pyproject.toml
src/hydrolib/data_structures/bitmap-project/src/hybitmap/: __about__.py  __init__.py
(+358 files in other folders)
