[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Hydrogenlib-Bitmap"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "LittleSong2024", email = "LittleSong2024@qq.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/LittleSong2024/HydrogenLib/src/hydrolib/data_structures/bitmap-project#readme"
Issues = "https://github.com/LittleSong2024/HydrogenLib/src/hydrolib/data_structures/bitmap-project/issues"
Source = "https://github.com/LittleSong2024/HydrogenLib/src/hydrolib/data_structures/bitmap-project"

[tool.hatch.version]
path = "src/bitmap_project/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/bitmap_project tests}"

[tool.coverage.run]
source_pkgs = ["bitmap_project", "tests"]
branch = true
parallel = true
omit = [
  "src/bitmap_project/__about__.py",
]

[tool.coverage.paths]
bitmap_project = ["src/hybitmap", "*/hybitmap/src/hybitmap"]
tests = ["tests", "*/HydrogenLib/src/hydrolib/data_structures/bitmap-project/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.build]
target = "wheel"

[tool.hatch.build.targets.wheel]
packages = ['src/hydrolib']
